# weather-au-exporter

./: .gitignore  Dockerfile  Makefile  README.md  cr.yaml  index.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-and-publish.yaml  docker-publish.yaml  lint.yml
charts/weather-au-exporter/: CHANGELOG.md  Chart.yaml  Makefile  README.md  README.md.gotmpl  values.yaml
charts/weather-au-exporter/templates/: deployment.yaml  secret.yaml
helm/weather-au-exporter/: Chart.yaml  createRelease.sh  values.yaml
helm/weather-au-exporter/templates/: _helpers.tpl  service.yaml  serviceaccount.yaml  servicemonitor.yaml
weather_au_exporter/: app.py
