[project]
name = "weather-au-exporter"
version = "0.2.4"
description = ""
authors = []
requires-python = ">=3.7,<4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "Flask>=2.0.2,<3",
    "beautifulsoup4>=4.10.0,<5",
    "requests>=2.26.0,<3",
    "python-dateutil>=2.8.2,<3",
    "Flask-APScheduler>=1.12.2,<2",
    "prometheus-flask-exporter>=0.18.5,<0.19",
    "tzlocal<3.0",
    "gunicorn>=20.1.0,<21",
    "pyowm>=3.2.0,<4",
]

[dependency-groups]
dev = [
    "black>=21.10b0,<22",
    "flake8>=4.0.1,<5",
]

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"
