[project]
name = "weather-au-exporter"
version = "0.2.4"
description = ""
authors = []
requires-python = ">=3.12,<4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "flask>=3.0,<4",
    "beautifulsoup4>=4.10.0,<5",
    "requests>=2.26.0,<3",
    "python-dateutil>=2.8.2,<3",
    "Flask-APScheduler>=1.13.1,<2",
    "prometheus-flask-exporter>=0.18.5,<0.24",
    "tzlocal<6.0",
    "gunicorn>=20.1.0,<26",
    "pyowm>=3.2.0,<4",
]

[dependency-groups]
dev = [
    "flake8>=4.0.1,<5",
]

# [build-system]
# requires = ["uv_build>=0.9.16,<0.12.0"]
# build-backend = "uv_build"
